wrap held by pokemon

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -691,6 +691,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-content-center {
   place-content: center;
 }
