--- a/styles/globals.css
+++ b/styles/globals.css
@@ -541,6 +541,10 @@ video {
   left: 0.75rem;
 }
 
+.isolate {
+  isolation: isolate;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -551,6 +555,14 @@ video {
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.-z-50 {
+  z-index: -50;
 }
 
 .my-3 {
@@ -1386,6 +1398,18 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:-z-10 {
+    z-index: -10;
+  }
+
+  .md\:z-0 {
+    z-index: 0;
+  }
+
+  .md\:-z-0 {
+    z-index: 0;
+  }
+
   .md\:hidden {
     display: none;
   }
